fix: [Console] White empty when menu is collapsed

--- a/gravitee-apim-console-webui/src/shared/components/gio-chart-line/gio-chart-line.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-chart-line/gio-chart-line.component.scss
@@ -25,4 +25,10 @@
     display: flex;
     justify-content: center;
   }
+
+  .highcharts-container,
+  .highcharts-container svg {
+    width: 100% !important;
+    height: 100% !important;
+  }
 }
