--- a/gravitee-apim-console-webui/src/shared/components/gio-chart-pie/gio-chart-pie.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-chart-pie/gio-chart-pie.component.scss
@@ -2,8 +2,15 @@
   &__chart {
     display: block;
   }
+
   &__no-data {
     display: flex;
     justify-content: center;
+  }
+
+  .highcharts-container,
+  .highcharts-container svg {
+    width: 100% !important;
+    height: 100% !important;
   }
 }
